fix: layout type tp2

--- a/tps/tp2/tp2.html
+++ b/tps/tp2/tp2.html
@@ -4312,7 +4312,7 @@ K/pEW3Z2RZu7yRS/WCXZRe0W+xP18/Rz9fP18uzm7T9RP1E/USnXpz9PP0k/WQM9mBa9GGIUTZz8
 wSjVHUQdPokDo8gJhaj2gzA7w4IeUNQHlDlkqaCUSjl/C/5V43Lect5y5cuXLect5y5cuW85bzly
 5cuXL8b8K/o//9k=" />
 </span></p></div>
-<div class="paragraph"><p>Pour ce faire, utilisez des Linear Layouts ou des Relative Layouts au choix.</p></div>
+<div class="paragraph"><p>Pour ce faire, utilisez un Constraint Layout.</p></div>
 </div>
 </div>
 <div class="sect1 slide">
