fix: link to android assets studio

--- a/04-cycle_de_vie.html
+++ b/04-cycle_de_vie.html
@@ -3864,7 +3864,7 @@ Par un Googler : Roman Nurik
 <ul class="">
 <li>
 <span>
-Site : <a href="http://android-ui-utils.googlecode.com/hg/asset-studio/dist/index.html">http://android-ui-utils.googlecode.com/hg/asset-studio/dist/index.html</a>
+Site : <a href="https://romannurik.github.io/AndroidAssetStudio/">https://romannurik.github.io/AndroidAssetStudio/</a>
 </span>
 </li>
 </ul>
